separated styling into partials

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title id="pomodoro-title">Pomodoro Clock</title>
-  <link href="./sass/styles.css" type="text/css" rel="stylesheet">
+  <link href="./stylesheet/styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Mukta" rel="stylesheet">
 </head>
 <body>
@@ -31,18 +31,18 @@
     <section class="session">
       <h3 class="session__title">Session Length</h3>
       <div class="session__container">
-        <button class="btn__timer btn__timer--left" id="session-left"></button>
+        <button class="btn btn--left" id="session-left"></button>
         <div class="session-length__value" id="session-value"></div>
-        <button class="btn__timer btn__timer--right" id="session-right"></button>
+        <button class="btn btn--right" id="session-right"></button>
       </div>
     </section>
 
     <section class="break">
       <h3 class="break__title">Break Length</h3>
       <div class="break__container">
-        <button class="btn__timer btn__timer--left" id="break-left"></button>
+        <button class="btn btn--left" id="break-left"></button>
         <div class="break-length__value" id="break-value"></div>
-        <button class="btn__timer btn__timer--right" id="break-right"></button>
+        <button class="btn btn--right" id="break-right"></button>
       </div>
     </section>
 
